1.poprawka-'contact.html'

--- a/brprofit_DPrus/contact.html
+++ b/brprofit_DPrus/contact.html
@@ -16,8 +16,8 @@
                 <nav>
                     <h1>Biuro Rachunkowe PROFIT sp. z o.o.</h1>
                     <a href="index.html">Strona główna</a>
-                    <a href="oferta.html">Oferta</a>
-                    <a href="kontakt.html">Kontakt</a>
+                    <a href="offer.html">Oferta</a>
+                    <a href="contact.html">Kontakt</a>
                 </nav>
             </section> 
         </header>
